im depressed now

--- a/src/components/layouts/Footer.sass
+++ b/src/components/layouts/Footer.sass
@@ -1,29 +1,32 @@
 @import '/src/sass/Variables'
 
 .footer
-    padding-top: 15%
-    padding-bottom: 15%
+    background-color: #e0ac78
+    padding-top: 5%
+    padding-bottom: 5%
 
-    .footer-obj
-        align-items: center
-        justify-content: center
+    .circle-text
+        padding-left: 75%
+        transform-origin: center
+        width: 40%
+
+
+    .grid-obj
+        align-self: center
+        justify-self: center
+        padding-right: 20%
+        padding-left: 20%
         
-
         .grid-container 
-            width: 50%
             display: grid
             grid-template-columns: 1fr 1fr 1fr
-            align-self: center
-            justify-self: center
             border-top: 2px solid #a30707
             border-bottom: 2px solid #a30707
             
-
-
-        .grid-item 
-            font-size: 15px
-            align-self: center
-            justify-self: center
+            .grid-item 
+                font-size: 20px
+                align-self: center
+                justify-self: center
 
 
             
